2.1.0/_sources/gallery/mplot3d/surface3d_2.rst.txt


.. _sphx_glr_gallery_mplot3d_surface3d_2.py:


========================
3D surface (solid color)
========================

Demonstrates a very basic plot of a 3D surface using a solid color.




.. image:: /gallery/mplot3d/images/sphx_glr_surface3d_2_001.png
    :align: center





.. code-block:: python


    from mpl_toolkits.mplot3d import Axes3D
    import matplotlib.pyplot as plt
    import numpy as np


    fig = plt.figure()
    ax = fig.add_subplot(111, projection='3d')

    # Make data
    u = np.linspace(0, 2 * np.pi, 100)
    v = np.linspace(0, np.pi, 100)
    x = 10 * np.outer(np.cos(u), np.sin(v))
    y = 10 * np.outer(np.sin(u), np.sin(v))
    z = 10 * np.outer(np.ones(np.size(u)), np.cos(v))

    # Plot the surface
    ax.plot_surface(x, y, z, color='b')

    plt.show()

**Total running time of the script:** ( 0 minutes  0.097 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: surface3d_2.py <surface3d_2.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: surface3d_2.ipynb <surface3d_2.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
